# dm_spine_runtime

./: .gitignore  CLAUDE.md  Cargo.toml  PHASE_7_PLAN.md  README.md
.claude/: settings.json
.github/workflows/: ci.yml
docs/: BINARY_FORMAT.md  PHASE_2_PLAN.md
examples/: debug_anim_bone.rs  debug_rear_foot.rs  dump_slots.rs  software_render.rs
src/: atlas.rs  lib.rs
src/animation/: apply.rs  curve.rs  mod.rs  property.rs  state.rs  state_data.rs
src/data/: animation.rs  attachment.rs  bone.rs  constraint.rs  event.rs  mod.rs  skeleton.rs  skin.rs  slot.rs
src/load/: attachment_loader.rs  mod.rs
src/load/binary/: mod.rs  parse.rs  reader.rs
src/load/json/: mod.rs  parse.rs
src/math/: color.rs  mod.rs  triangulator.rs  util.rs
src/render/: clipping.rs  mod.rs  renderer.rs
src/skeleton/: bone.rs  bounds.rs  constraint.rs  ik.rs  mod.rs  path.rs  physics.rs  skeleton.rs  slot.rs  transform.rs  update_cache.rs  vertex.rs
tests/: animation_smoke.rs  binary_load.rs  golden_animation.rs  golden_pose.rs  golden_render.rs  json_load.rs  multi_track.rs  render_smoke.rs  update_cache_all_rigs.rs
tests/fixtures/alien/ess/: setup_pose.json
tests/fixtures/alien/pro/: setup_pose.json
tests/fixtures/celestial-circus/pro/: setup_pose.json
tests/fixtures/chibi-stickers/: setup_pose.json
tests/fixtures/cloud-pot/: setup_pose.json
tests/fixtures/coin/pro/: setup_pose.json
tests/fixtures/render/: chibi-stickers.json  cloud-pot.json
tools/spine_capture/: Makefile  capture_all.sh  capture_animations.sh  capture_render.sh  main.cpp  synthetic.cpp
(+77 files in other folders)
