[package]
name = "dm_spine_runtime"
version = "0.1.0"
edition = "2024"
description = "Native Rust port of the Spine 4.2 runtime. Renderer-agnostic."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/dead-money/dm_spine_runtime"
categories = ["game-development", "graphics"]
keywords = ["spine", "2d", "animation", "skeletal"]

[dependencies]
glam = "0.32"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
proptest = "1"
pretty_assertions = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Spine uses f32 pervasively; these lints fire constantly on faithful C++ ports
# without adding value.
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
module_name_repetitions = "allow"
